build_error.log

> myelin@0.0.1 build
> vite build

vite v8.0.16 building ssr environment for production...
[2Ktransforming...9:44:04 PM [vite-plugin-svelte] src/routes/notes/[id]/+page.svelte:435:1 Unused CSS selector ".header-actions button"
https://svelte.dev/e/css_unused_selector
433: 
434:   .back-link,
435:   .header-actions button,
                             ^
436:   input {
437:     font: inherit;
9:44:04 PM [vite-plugin-svelte] src/routes/notes/[id]/+page.svelte:524:1 Unused CSS selector ".sidebar-toggle-btn"
https://svelte.dev/e/css_unused_selector
522:   }
523: 
524:   .sidebar-toggle-btn {
                          ^
525:     display: flex;
526:     align-items: center;
✓ 154 modules transformed.
rendering chunks...
✗ Build failed in 498ms
error during build:
Build failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Unexpected token Number { has_sign: false, value: 0.5, int_value: None }
198 |  		width: 14px;
199 |  		height: 14px;
200 |  		margin-right: var(--space-2.5);
    |                               ^
201 |  		opacity: 0.8;
202 |  	}
    at Module.<anonymous> (/home/paper/studioprojects/myelin/node_modules/lightningcss/node/index.js:56:14)
    at minifyCSS (file:///home/paper/studioprojects/myelin/node_modules/vite/dist/node/chunks/node.js:21424:59)
    at async finalizeCss (file:///home/paper/studioprojects/myelin/node_modules/vite/dist/node/chunks/node.js:21269:36)
    at async Promise.all (index 1)
    at aggregateBindingErrorsIntoJsError (file:///home/paper/studioprojects/myelin/node_modules/rolldown/dist/shared/error-BuvQYXuZ.mjs:48:18)
    at unwrapBindingResult (file:///home/paper/studioprojects/myelin/node_modules/rolldown/dist/shared/error-BuvQYXuZ.mjs:18:128)
    at #build (file:///home/paper/studioprojects/myelin/node_modules/rolldown/dist/shared/rolldown-build-CrPk_lZe.mjs:3246:34)
    at async buildEnvironment (file:///home/paper/studioprojects/myelin/node_modules/vite/dist/node/chunks/node.js:33253:64)
    at async Object.build (file:///home/paper/studioprojects/myelin/node_modules/vite/dist/node/chunks/node.js:33675:19)
    at async Object.buildApp (file:///home/paper/studioprojects/myelin/node_modules/vite/dist/node/chunks/node.js:33672:153)
    at async CAC.<anonymous> (file:///home/paper/studioprojects/myelin/node_modules/vite/dist/node/cli.js:777:3) {
  errors: [Getter/Setter]
}
